# resume-projects

./: .gitignore  README.md  pyproject.toml
Shopping Agent/: notebook.ipynb  retrieve_ratings.py
Smart Inbox & Email Management Agent/: Project Description.docx  notebook.ipynb
Smart Inbox & Email Management Agent/src/: chatbot.py  main.py  markdown_1.md  tools.py  workflow.py
