[project]
name = "resume-projects"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-auth-oauthlib>=1.4.0",
    "imap-tools>=1.13.0",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.7",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
]
